# pomodoro-rpi-pico

./: .gitignore  CMakeLists.txt  README.md
inc/: buttons_handler.h  buzzer.h  flash.h  main.h  mastermind.h  simon_game.h  state_machine.h  time_handler.h  user_interface.h
lib/: CMakeLists.txt
lib/inc/: fonts.h  st7735.h  testimg.h  timer_.h
lib/src/: st7735.c  timer_.c
src/: buttons_handler.c  buzzer.c  flash.c  main.c  mastermind.c  simon_game.c  state_machine.c  user_interface.c  user_interface.h
